Adicionado suporte inicial a página mestra.

--- a/exemplos/pagina_mestra.phtml
+++ b/exemplos/pagina_mestra.phtml
@@ -23,13 +23,25 @@
  * SOFTWARE.
  */
 
-namespace Vilex\Exceptions;
+?>
 
+<html>
+<head>
+    <title>Página de Teste</title>
 
-class ViewNaoEncontradaException extends \Exception
-{
-    public function __construct(string $view)
-    {
-        parent::__construct("View {$view} não encontrada!", 404);
-    }
-}
+    [HTML-HEAD/]
+</head>
+<body>
+    <header>
+
+    </header>
+        [CABECALHO/]
+    <div>
+        [CORPO/]
+    </div>
+
+    <footer>
+        [RODAPE/]
+    </footer>
+</body>
+</html>
