- Adicionando suporte a novas funcionalidades do Javascript - Refatorando código para ficar mais perto do SOLID

--- a/tests/Templates/arquivos/template.phtml
+++ b/tests/Templates/arquivos/template.phtml
@@ -22,21 +22,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
+?>
 
-namespace Vilex\Exceptions;
-
-
-use Throwable;
-
-class ContextoInvalidoException extends \Exception
-{
-    /**
-     * ContextoInvalidoException constructor.
-     * @param string $contexto
-     * @param string $motivo
-     */
-    public function __construct(string $contexto, string $motivo)
-    {
-        parent::__construct("Contexto {$contexto} inválido! Motivo: {$motivo}.", 500);
-    }
-}
+[CONTEUDO]
+<h1>Olá mundo!</h1>
+[/CONTEUDO]
